--- a/index.html
+++ b/index.html
@@ -162,6 +162,10 @@
                 <a href="#">readmore</a>
             </div>
         </div>
+        <hr size="10" color="red">
+        <hr size="10" color="blue">
+        <hr size="10" color="green">
+        <hr size="10" color="yellow">
         <script src="./swiper/swiper-bundle.min.js"></script>
         <script>
             var swiper = new Swiper(".mySwiper", {
